--- a/frontend/src/app/shared/component/shared-job-profile-matches/shared-job-profile-matches.component.html
+++ b/frontend/src/app/shared/component/shared-job-profile-matches/shared-job-profile-matches.component.html
@@ -83,7 +83,7 @@
                         </ng-container>
                       </ng-container>
                       <ng-template #elseHandsTemplate>
-                        <p>--</p>
+                        <p style="min-height: 42px;" >--</p>
                       </ng-template>
                    </li>
                 </ul>
@@ -245,8 +245,8 @@
 							 <i class="fa fa-times text-danger "></i>
 							 {{(userInfo?.work_authorization || userInfo?.work_authorization ==
 							 0)
-							 ? (userInfo?.work_authorization == 0 ? ("postYourResume.iHaveWorkAuthorization" |
-							 translate) : ("postYourResume.iNeedVisaAponsorship" | translate)) : '--'}}
+							 ? (userInfo?.work_authorization == 0 ? ("userProfile.iHaveWorkAuthorization" |
+							 translate) : ("userProfile.iNeedVisaAponsorship" | translate)) : '--'}}
 						</span>
                         <!-- <span *ngIf="matchedElement && (jobInfo.work_authorization == userInfo?.work_authorization || jobInfo.work_authorization == 2 )">
                           <i class="fa fa-check text-green "></i>
@@ -483,7 +483,7 @@
                         </ng-container>
                       </ng-container>
                       <ng-template #elseHandsTemplate>
-                        <p>--</p>
+                        <p style="min-height: 42px;">--</p>
                       </ng-template>
                    </li>
                 </ul>
@@ -645,8 +645,8 @@
 							 <i class="fa fa-times text-danger "></i>
 							 {{(userInfo?.work_authorization || userInfo?.work_authorization ==
 							 0)
-							 ? (userInfo?.work_authorization == 0 ? ("postYourResume.iHaveWorkAuthorization" |
-							 translate) : ("postYourResume.iNeedVisaAponsorship" | translate)) : '--'}}
+							 ? (userInfo?.work_authorization == 0 ? ("userProfile.iHaveWorkAuthorization" |
+							 translate) : ("userProfile.iNeedVisaAponsorship" | translate)) : '--'}}
 						</span>
                         <!-- <span *ngIf="matchedElement && (jobInfo.work_authorization == userInfo?.work_authorization || jobInfo.work_authorization == 2 )">
                           <i class="fa fa-check text-green "></i>
@@ -885,7 +885,7 @@
                         </ng-container>
                       </ng-container>
                       <ng-template #elseHandsTemplate>
-                        <p>--</p>
+                        <p style="min-height: 42px;">--</p>
                       </ng-template>
                    </li>
                 </ul>
@@ -1047,8 +1047,8 @@
 							 <i class="fa fa-times text-danger "></i>
 							 {{(userInfo?.work_authorization || userInfo?.work_authorization ==
 							 0)
-							 ? (userInfo?.work_authorization == 0 ? ("postYourResume.iHaveWorkAuthorization" |
-							 translate) : ("postYourResume.iNeedVisaAponsorship" | translate)) : '--'}}
+							 ? (userInfo?.work_authorization == 0 ? ("userProfile.iHaveWorkAuthorization" |
+							 translate) : ("userProfile.iNeedVisaAponsorship" | translate)) : '--'}}
 						</span>
                        <!--  <span *ngIf="matchedElement && (jobInfo.work_authorization == userInfo?.work_authorization || jobInfo.work_authorization == 2 )">
                           <i class="fa fa-check text-green "></i>
@@ -1287,7 +1287,7 @@
                         </ng-container>
                       </ng-container>
                       <ng-template #elseHandsTemplate>
-                        <p>--</p>
+                        <p style="min-height: 42px;">--</p>
                       </ng-template>
                    </li>
                 </ul>
@@ -1449,8 +1449,8 @@
 							 <i class="fa fa-times text-danger "></i>
 							 {{(userInfo?.work_authorization || userInfo?.work_authorization ==
 							 0)
-							 ? (userInfo?.work_authorization == 0 ? ("postYourResume.iHaveWorkAuthorization" |
-							 translate) : ("postYourResume.iNeedVisaAponsorship" | translate)) : '--'}}
+							 ? (userInfo?.work_authorization == 0 ? ("userProfile.iHaveWorkAuthorization" |
+							 translate) : ("userProfile.iNeedVisaAponsorship" | translate)) : '--'}}
 						</span>				
                         <!-- <span *ngIf="matchedElement && (jobInfo.work_authorization == userInfo?.work_authorization || jobInfo.work_authorization == 2 )">
                           <i class="fa fa-check text-green "></i>
