--- a/frontend/src/app/shared/component/shared-user-profile-job-multiple-matches/shared-user-profile-job-multiple-matches.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile-job-multiple-matches/shared-user-profile-job-multiple-matches.component.html
@@ -116,7 +116,7 @@
 				<div class="row">
 					<div class="col-lg-5 caption">
 						<ul class="list-group">
-							<li class="list-group-item">{{"postYourResume.others" | translate }}</li>
+							<li class="list-group-item">{{"userProfile.others" | translate }}</li>
 						</ul>
 					</div>
 					<div class="col-lg-7 info">
@@ -198,7 +198,7 @@
 							{{utilsHelperService.onConvertArrayToString(userInfo?.visa_type)}}
 						</ul>
 						<ul class="list-group ul-value" *ngIf="userInfo?.work_authorization == 1 ">
-							{{"postYourResume.iNeedVisaAponsorship" | translate }}
+							{{"userProfile.iNeedVisaAponsorship" | translate }}
 						</ul>
 					</div>
 				</div>
