--- a/frontend/src/app/shared/component/shared-user-profile-matches/shared-user-profile-matches.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile-matches/shared-user-profile-matches.component.html
@@ -282,15 +282,15 @@
 							  </div>
 							  <div *ngIf="matchedElement && finpostJobDetailsCountry(postedJobsDetails?.country) != findCountrysData([matchingUsers?.profile?.nationality]) && checkCountry(postedJobsDetails?.country) && postedJobsDetails?.work_authorization != 0 && (postedJobsDetails?.work_authorization == 1 || postedJobsDetails?.work_authorization == 2) ">
 							<i class="fa fa-check text-green "></i>
-							{{"postYourResume.iHaveWorkAuthorization" | translate}}
+							{{"userProfile.iHaveWorkAuthorization" | translate}}
 							  </div>
 							  <div *ngIf="missingElement && finpostJobDetailsCountry(postedJobsDetails?.country) != findCountrysData([matchingUsers?.profile?.nationality]) && (postedJobsDetails?.work_authorization == 0) ">
 							<i class="fa fa-times text-danger "></i>
-							{{"postYourResume.iHaveWorkAuthorization" | translate}}
+							{{"userProfile.iHaveWorkAuthorization" | translate}}
 							  </div>
 							  <div *ngIf="matchedElement && finpostJobDetailsCountry(postedJobsDetails?.country) != findCountrysData([matchingUsers?.profile?.nationality]) && !checkCountry(postedJobsDetails?.country) && (matchingUsers?.profile?.work_authorization == 1) && postedJobsDetails?.work_authorization == 2 ">
 							<i class="fa fa-check text-green "></i>
-							{{"postYourResume.iNeedVisaAponsorship" | translate}}
+							{{"userProfile.iNeedVisaAponsorship" | translate}}
 							  </div>
 						</span>
 					</li>
@@ -768,15 +768,15 @@
 							  </div>
 							  <div *ngIf="matchedElement && finpostJobDetailsCountry(postedJobsDetails?.country) != findCountrysData([matchingUsers?.profile?.nationality]) && checkCountry(postedJobsDetails?.country) && postedJobsDetails?.work_authorization != 0 && (postedJobsDetails?.work_authorization == 1 || postedJobsDetails?.work_authorization == 2) ">
 							<i class="fa fa-check text-green "></i>
-							{{"postYourResume.iHaveWorkAuthorization" | translate}}
+							{{"userProfile.iHaveWorkAuthorization" | translate}}
 							  </div>
 							  <div *ngIf="missingElement && finpostJobDetailsCountry(postedJobsDetails?.country) != findCountrysData([matchingUsers?.profile?.nationality]) && (postedJobsDetails?.work_authorization == 0) ">
 							<i class="fa fa-times text-danger "></i>
-							{{"postYourResume.iHaveWorkAuthorization" | translate}}
+							{{"userProfile.iHaveWorkAuthorization" | translate}}
 							  </div>
 							  <div *ngIf="matchedElement && finpostJobDetailsCountry(postedJobsDetails?.country) != findCountrysData([matchingUsers?.profile?.nationality]) && !checkCountry(postedJobsDetails?.country) && (matchingUsers?.profile?.work_authorization == 1) && postedJobsDetails?.work_authorization == 2 ">
 							<i class="fa fa-check text-green "></i>
-							{{"postYourResume.iNeedVisaAponsorship" | translate}}
+							{{"userProfile.iNeedVisaAponsorship" | translate}}
 							  </div>
 						</span>
 					</li>
@@ -1254,15 +1254,15 @@
 							  </div>
 							  <div *ngIf="matchedElement && finpostJobDetailsCountry(postedJobsDetails?.country) != findCountrysData([matchingUsers?.profile?.nationality]) && checkCountry(postedJobsDetails?.country) && postedJobsDetails?.work_authorization != 0 && (postedJobsDetails?.work_authorization == 1 || postedJobsDetails?.work_authorization == 2) ">
 							<i class="fa fa-check text-green "></i>
-							{{"postYourResume.iHaveWorkAuthorization" | translate}}
+							{{"userProfile.iHaveWorkAuthorization" | translate}}
 							  </div>
 							  <div *ngIf="missingElement && finpostJobDetailsCountry(postedJobsDetails?.country) != findCountrysData([matchingUsers?.profile?.nationality]) && (postedJobsDetails?.work_authorization == 0) ">
 							<i class="fa fa-times text-danger "></i>
-							{{"postYourResume.iHaveWorkAuthorization" | translate}}
+							{{"userProfile.iHaveWorkAuthorization" | translate}}
 							  </div>
 							  <div *ngIf="matchedElement && finpostJobDetailsCountry(postedJobsDetails?.country) != findCountrysData([matchingUsers?.profile?.nationality]) && !checkCountry(postedJobsDetails?.country) && (matchingUsers?.profile?.work_authorization == 1) && postedJobsDetails?.work_authorization == 2 ">
 							<i class="fa fa-check text-green "></i>
-							{{"postYourResume.iNeedVisaAponsorship" | translate}}
+							{{"userProfile.iNeedVisaAponsorship" | translate}}
 							  </div>
 						</span>
 					</li>
@@ -1741,15 +1741,15 @@
 							  </div>
 							  <div *ngIf="matchedElement && finpostJobDetailsCountry(postedJobsDetails?.country) != findCountrysData([matchingUsers?.profile?.nationality]) && checkCountry(postedJobsDetails?.country) && postedJobsDetails?.work_authorization != 0 && (postedJobsDetails?.work_authorization == 1 || postedJobsDetails?.work_authorization == 2) ">
 							<i class="fa fa-check text-green "></i>
-							{{"postYourResume.iHaveWorkAuthorization" | translate}}
+							{{"userProfile.iHaveWorkAuthorization" | translate}}
 							  </div>
 							  <div *ngIf="missingElement && finpostJobDetailsCountry(postedJobsDetails?.country) != findCountrysData([matchingUsers?.profile?.nationality]) && (postedJobsDetails?.work_authorization == 0) ">
 							<i class="fa fa-times text-danger "></i>
-							{{"postYourResume.iHaveWorkAuthorization" | translate}}
+							{{"userProfile.iHaveWorkAuthorization" | translate}}
 							  </div>
 							  <div *ngIf="matchedElement && finpostJobDetailsCountry(postedJobsDetails?.country) != findCountrysData([matchingUsers?.profile?.nationality]) && !checkCountry(postedJobsDetails?.country) && (matchingUsers?.profile?.work_authorization == 1) && postedJobsDetails?.work_authorization == 2 ">
 							<i class="fa fa-check text-green "></i>
-							{{"postYourResume.iNeedVisaAponsorship" | translate}}
+							{{"userProfile.iNeedVisaAponsorship" | translate}}
 							  </div>
 						</span>
 					</li>
