--- a/frontend/src/app/modules/features/employer/post-job/screening-process/screening-process.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/screening-process/screening-process.component.html
@@ -37,8 +37,8 @@
 					</div>
 				</div>
 				<div class="col-lg-2 col-md-5">
-					<button type="button" class="text-danger btn p-0 btn-small"
-						style="line-height: 1.75; padding: .5rem 1.0rem;" (click)="onRemove(i)"><i class="fas fa-times"></i></button>
+					<button type="button" class="text-danger btn btn-small"
+						style="line-height: 1.75; padding: .5rem 1.0rem;border:none;" (click)="onRemove(i)"><i class="fas fa-times"></i></button>
 				</div>
 			</ng-container>
 		</div>
