--- a/frontend/src/app/shared/component/shared-job-profile-multiple-matches/shared-job-profile-multiple-matches.component.html
+++ b/frontend/src/app/shared/component/shared-job-profile-multiple-matches/shared-job-profile-multiple-matches.component.html
@@ -245,8 +245,8 @@
 							 <i class="fa fa-times text-danger "></i>
 							 {{(userInfo?.work_authorization || userInfo?.work_authorization ==
 							 0)
-							 ? (userInfo?.work_authorization == 0 ? ("postYourResume.iHaveWorkAuthorization" |
-							 translate) : ("postYourResume.iNeedVisaAponsorship" | translate)) : '--'}}
+							 ? (userInfo?.work_authorization == 0 ? ("userProfile.iHaveWorkAuthorization" |
+							 translate) : ("userProfile.iNeedVisaAponsorship" | translate)) : '--'}}
 						</span>
                         <!-- <span *ngIf="matchedElement && (jobInfo.work_authorization == userInfo?.work_authorization || jobInfo.work_authorization == 2 )">
                           <i class="fa fa-check text-green "></i>
@@ -645,8 +645,8 @@
 							 <i class="fa fa-times text-danger "></i>
 							 {{(userInfo?.work_authorization || userInfo?.work_authorization ==
 							 0)
-							 ? (userInfo?.work_authorization == 0 ? ("postYourResume.iHaveWorkAuthorization" |
-							 translate) : ("postYourResume.iNeedVisaAponsorship" | translate)) : '--'}}
+							 ? (userInfo?.work_authorization == 0 ? ("userProfile.iHaveWorkAuthorization" |
+							 translate) : ("userProfile.iNeedVisaAponsorship" | translate)) : '--'}}
 						</span>
                         <!-- <span *ngIf="matchedElement && (jobInfo.work_authorization == userInfo?.work_authorization || jobInfo.work_authorization == 2 )">
                           <i class="fa fa-check text-green "></i>
@@ -1047,8 +1047,8 @@
 							 <i class="fa fa-times text-danger "></i>
 							 {{(userInfo?.work_authorization || userInfo?.work_authorization ==
 							 0)
-							 ? (userInfo?.work_authorization == 0 ? ("postYourResume.iHaveWorkAuthorization" |
-							 translate) : ("postYourResume.iNeedVisaAponsorship" | translate)) : '--'}}
+							 ? (userInfo?.work_authorization == 0 ? ("userProfile.iHaveWorkAuthorization" |
+							 translate) : ("userProfile.iNeedVisaAponsorship" | translate)) : '--'}}
 						</span>
                        <!--  <span *ngIf="matchedElement && (jobInfo.work_authorization == userInfo?.work_authorization || jobInfo.work_authorization == 2 )">
                           <i class="fa fa-check text-green "></i>
@@ -1449,8 +1449,8 @@
 							 <i class="fa fa-times text-danger "></i>
 							 {{(userInfo?.work_authorization || userInfo?.work_authorization ==
 							 0)
-							 ? (userInfo?.work_authorization == 0 ? ("postYourResume.iHaveWorkAuthorization" |
-							 translate) : ("postYourResume.iNeedVisaAponsorship" | translate)) : '--'}}
+							 ? (userInfo?.work_authorization == 0 ? ("userProfile.iHaveWorkAuthorization" |
+							 translate) : ("userProfile.iNeedVisaAponsorship" | translate)) : '--'}}
 						</span>				
                         <!-- <span *ngIf="matchedElement && (jobInfo.work_authorization == userInfo?.work_authorization || jobInfo.work_authorization == 2 )">
                           <i class="fa fa-check text-green "></i>
