--- a/frontend/src/app/shared/component/shared-user-profile-job-matches/shared-user-profile-job-matches.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile-job-matches/shared-user-profile-job-matches.component.html
@@ -40,7 +40,8 @@
 					</div>
 					<div class="col-lg-8 info">
 						<ul class="list-group">
-							<li class="list-group-item handsExps text-capitalize">{{sharedService.onFindDomainFromID(userInfo?.domains_worked)}}</li>
+							<li class="list-group-item handsExps text-capitalize" *ngIf="userInfo?.domains_worked && userInfo?.domains_worked.length ">{{sharedService.onFindDomainFromID(userInfo?.domains_worked)}}</li>
+							<li class="list-group-item handsExps text-capitalize" *ngIf="!userInfo?.domains_worked || !userInfo?.domains_worked.length ">--</li>
 						</ul>
 					</div>
 				</div>	
@@ -374,7 +375,8 @@
 					</div>
 					<div class="col-lg-8 info">
 						<ul class="list-group">
-							<li class="list-group-item text-capitalize">{{sharedService.onFindDomainFromID(userInfo?.domains_worked)}}</li>
+							<li class="list-group-item text-capitalize" *ngIf="userInfo?.domains_worked && userInfo?.domains_worked.length " >{{sharedService.onFindDomainFromID(userInfo?.domains_worked)}}</li>
+							<li class="list-group-item text-capitalize" *ngIf="!userInfo?.domains_worked || !userInfo?.domains_worked.length " >--</li>
 						</ul>
 					</div>
 				</div>	
@@ -697,7 +699,8 @@
 					</div>
 					<div class="col-lg-8 info">
 						<ul class="list-group">
-							<li class="list-group-item text-capitalize">{{sharedService.onFindDomainFromID(userInfo?.domains_worked)}}</li>
+							<li class="list-group-item text-capitalize" *ngIf="userInfo?.domains_worked && userInfo?.domains_worked.length ">{{sharedService.onFindDomainFromID(userInfo?.domains_worked)}}</li>
+							<li class="list-group-item text-capitalize" *ngIf="!userInfo?.domains_worked || !userInfo?.domains_worked.length ">--</li>
 						</ul>
 					</div>
 				</div>	
@@ -1017,7 +1020,8 @@
 					</div>
 					<div class="col-lg-8 info">
 						<ul class="list-group">
-							<li class="list-group-item text-capitalize">{{sharedService.onFindDomainFromID(userInfo?.domains_worked)}}</li>
+							<li class="list-group-item text-capitalize" *ngIf="userInfo?.domains_worked && userInfo?.domains_worked.length ">{{sharedService.onFindDomainFromID(userInfo?.domains_worked)}}</li>
+							<li class="list-group-item text-capitalize" *ngIf="!userInfo?.domains_worked || !userInfo?.domains_worked.length ">--</li>
 						</ul>
 					</div>
 				</div>	
