--- a/frontend/src/app/shared/component/shared-job-profile-matches/shared-job-profile-matches.component.html
+++ b/frontend/src/app/shared/component/shared-job-profile-matches/shared-job-profile-matches.component.html
@@ -225,7 +225,7 @@
 					</li>
                  </ul>
 			</div>
-			<div class="  info-box" *ngIf="jobInfo.match_select?.work_authorization=='0'">
+			<div class="  info-box" *ngIf="checkWork() && jobInfo.match_select?.work_authorization=='0'">
 				 <ul class="list-group">
 					<li class="list-group-item">
 						<span *ngIf="matchedElement && (finpostJobDetailsCountry(jobInfo?.country) == findCountry([userInfo?.nationality]) || (jobInfo?.work_authorization == 0 || jobInfo?.work_authorization == 1 || jobInfo?.work_authorization == 2) )">
@@ -625,7 +625,7 @@
 					</li>
                  </ul>
 			</div>
-			<div class="  info-box" *ngIf="jobInfo.match_select?.work_authorization=='1'">
+			<div class="  info-box" *ngIf="checkWork() && jobInfo.match_select?.work_authorization=='1'">
 				 <ul class="list-group">
 					<li class="list-group-item">
 						<span *ngIf="matchedElement && (finpostJobDetailsCountry(jobInfo?.country) == findCountry([userInfo?.nationality]) || (jobInfo?.work_authorization == 0 || jobInfo?.work_authorization == 1 || jobInfo?.work_authorization == 2) )">
@@ -1027,7 +1027,7 @@
 					</li>
                  </ul>
 			</div>
-			<div class="  info-box" *ngIf="jobInfo.match_select?.work_authorization=='2'">
+			<div class="  info-box" *ngIf="checkWork() && jobInfo.match_select?.work_authorization=='2'">
 				 <ul class="list-group">
 					<li class="list-group-item">
 						<span *ngIf="matchedElement && (finpostJobDetailsCountry(jobInfo?.country) == findCountry([userInfo?.nationality]) || (jobInfo?.work_authorization == 0 || jobInfo?.work_authorization == 1 || jobInfo?.work_authorization == 2) )">
@@ -1429,7 +1429,7 @@
 					</li>
                  </ul>
 			</div>
-			<div class="  info-box" *ngIf="jobInfo.match_select?.work_authorization==''">
+			<div class="  info-box" *ngIf="checkWork() && jobInfo.match_select?.work_authorization==''">
 				 <ul class="list-group">
 					<li class="list-group-item">
 						<span *ngIf="matchedElement && (finpostJobDetailsCountry(jobInfo?.country) == findCountry([userInfo?.nationality]) || (jobInfo?.work_authorization == 0 || jobInfo?.work_authorization == 1 || jobInfo?.work_authorization == 2) )">
