--- a/frontend/src/app/shared/component/shared-user-profile-job-matches/shared-user-profile-job-matches.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile-job-matches/shared-user-profile-job-matches.component.html
@@ -184,7 +184,7 @@
 					</div>
 				</div>
 			</div>
-			<div *ngIf="postedJobsDetails?.match_select?.work_authorization=='0'">
+			<div *ngIf="checkWork() && postedJobsDetails?.match_select?.work_authorization=='0'">
 				<div class="row">
 					<div class="col-lg-4 caption">
 						<ul class="list-group">
@@ -519,7 +519,7 @@
 					</div>
 				</div>
 			</div>
-			<div *ngIf="postedJobsDetails?.match_select?.work_authorization=='1'">
+			<div *ngIf="checkWork() && postedJobsDetails?.match_select?.work_authorization=='1'">
 				<div class="row">
 					<div class="col-lg-4 caption">
 						<ul class="list-group">
@@ -843,7 +843,7 @@
 					</div>
 				</div>
 			</div>
-			<div *ngIf="postedJobsDetails?.match_select?.work_authorization=='2'">
+			<div *ngIf="checkWork() && postedJobsDetails?.match_select?.work_authorization=='2'">
 				<div class="row">
 					<div class="col-lg-4 caption">
 						<ul class="list-group">
@@ -1164,7 +1164,7 @@
 					</div>
 				</div>
 			</div>
-			<div *ngIf="postedJobsDetails?.match_select?.work_authorization=='' ">
+			<div *ngIf="checkWork() &&  postedJobsDetails?.match_select?.work_authorization=='' ">
 				<div class="row">
 					<div class="col-lg-4 caption">
 						<ul class="list-group">
