--- a/frontend/src/app/shared/component/shared-job-profile-matches/shared-job-profile-matches.component.html
+++ b/frontend/src/app/shared/component/shared-job-profile-matches/shared-job-profile-matches.component.html
@@ -403,6 +403,14 @@
 					</li>
 				</ul>
 			</div>
+			<div *ngIf="isOtherRequired">
+				<ul class="list-group" *ngFor="let item of jobInfo?.others; let i=index">
+					<li class="list-group-item text-capitalize handsExp" *ngIf="checkDataOthers(jobInfo?.match_select[item?.id],'0')" [ngClass]="(isMultipleMatches === true)?'min-handsExps':''"   >			  
+					  <span *ngIf="matchedElement && checkValuesField(item?.id , 'yes')" > <i class="fas fa-check text-green " ></i> {{checkValues(item?.id)}} </span>
+					  <span *ngIf="missingElement && checkValuesField(item?.id , 'no')" > <i class="fas fa-times text-danger " ></i> {{checkValues(item?.id)}} </span>
+					</li>
+				 </ul>
+			</div>
 		</div>
 		<div class="accordion" *ngIf="desired">
 			<div class="pj-title m-b-1" *ngIf="!isMultipleMatches" >
@@ -802,6 +810,14 @@
 						</ng-container> 
 					</li>
 				</ul>
+			</div>
+			<div *ngIf="isOtherDesired">
+				<ul class="list-group" *ngFor="let item of jobInfo?.others; let i=index">
+					<li class="list-group-item text-capitalize handsExp" *ngIf="checkDataOthers(jobInfo?.match_select[item?.id],'1')" [ngClass]="(isMultipleMatches === true)?'min-handsExps':''"   >			  
+					  <span *ngIf="matchedElement && checkValuesField(item?.id , 'yes')" > <i class="fas fa-check text-green " ></i> {{checkValues(item?.id)}} </span>
+					  <span *ngIf="missingElement && checkValuesField(item?.id , 'no')" > <i class="fas fa-times text-danger " ></i> {{checkValues(item?.id)}} </span>
+					</li>
+				 </ul>
 			</div>
 			
 		</div>
@@ -1205,6 +1221,14 @@
 					</li>
 				</ul>
 			</div>
+			<div *ngIf="isOtherDesired">
+				<ul class="list-group" *ngFor="let item of jobInfo?.others; let i=index">
+					<li class="list-group-item text-capitalize handsExp" *ngIf="checkDataOthers(jobInfo?.match_select[item?.id],'2')" [ngClass]="(isMultipleMatches === true)?'min-handsExps':''"   >			  
+					  <span *ngIf="matchedElement && checkValuesField(item?.id , 'yes')" > <i class="fas fa-check text-green " ></i> {{checkValues(item?.id)}} </span>
+					  <span *ngIf="missingElement && checkValuesField(item?.id , 'no')" > <i class="fas fa-times text-danger " ></i> {{checkValues(item?.id)}} </span>
+					</li>
+				 </ul>
+			</div>
 		</div>
 		<div class="accordion"  *ngIf="optional">
 			<div class="pj-title m-b-1" *ngIf="!isMultipleMatches" >
@@ -1606,6 +1630,14 @@
 						</ng-container> 
 					</li>
 				</ul>
+			</div>
+			<div *ngIf="isOtherOptional">
+				<ul class="list-group" *ngFor="let item of jobInfo?.others; let i=index">
+					<li class="list-group-item text-capitalize handsExp" *ngIf="checkDataOthers(jobInfo?.match_select[item?.id],'')" [ngClass]="(isMultipleMatches === true)?'min-handsExps':''"   >			  
+					  <span *ngIf="matchedElement && checkValuesField(item?.id , 'yes')" > <i class="fas fa-check text-green " ></i> {{checkValues(item?.id)}} </span>
+					  <span *ngIf="missingElement && checkValuesField(item?.id , 'no')" > <i class="fas fa-times text-danger " ></i> {{checkValues(item?.id)}} </span>
+					</li>
+				 </ul>
 			</div>
 	</div>
 </div>
